K8S/filemanagementservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filemanagementservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filemanagementservice
  template:
    metadata:
      labels:
        app: filemanagementservice
    spec:
      containers:
        - name: filemanagementservice
          image: maxd3110/filemanagementservice:latest
          volumeMounts:
            - name: shared-files
              mountPath: /app/SharedFiles
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: shared-files-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: filemanagementservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: filemanagementservice
  ports:
    - name: filemanagement-tcp-port
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: filemanagement-grpc-port
      protocol: TCP
      port: 420
      targetPort: 420
