K8S/filemanagementservice-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: filemanagementnpservice-srv
spec:
  selector:
    app: filemanagementservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
