K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: docflow.com
      http:
        paths:
          - path: /api/files
            pathType: Prefix
            backend:
              service:
                name: filemanagementservice-clusterip-srv
                port:
                  number: 8080
          - path: /api/processor/files
            pathType: Prefix
            backend:
              service:
                name: fileprocessorservice-clusterip-srv
                port:
                  number: 8080
